--- a/i2b2-wildfly/1.7.09/crc.properties
+++ b/i2b2-wildfly/1.7.09/crc.properties
@@ -17,6 +17,8 @@ queryprocessor.ws.pm.bypass.project=Demo
 queryprocessor.ds.lookup.datasource=CRCDataSourceLookup
 queryprocessor.ds.lookup.servertype=ORACLE
 queryprocessor.ds.lookup.schemaname=i2b2hive
+# https://community.i2b2.org/wiki/display/MFT/Multi-fact+Table+Home
+queryprocessor.multifacttable=false
 
 #######################################
 # Ontology Cell
